# methings

./: .firebaserc  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  dropbear_modifications.md  firebase.json  me.things.pptx
app/: README.md
app/android/app/src/main/cpp/: CMakeLists.txt  pty_bridge.cpp  python_bridge.cpp  usb_iso_bridge.cpp
docs/: AGENT_OUTCOME_GOAL.md  DEBUGGING.md  UI_THEME_MAPPING.md  adding_device_apis.md  agent_debugging_notes.md  architecture.md  architecture_v2.md  brain_prompts.md  dropbear_modifications.md  embedded_gemma4.md  first_build_checklist.md  me_sync_v4_streaming_protocol.md  oauth_inappbrowser.md  python_for_android.md  python_worker_contract.md  referent_locale_packs.md  rtdb_auth_plan.md  rtdb_signaling_setup.md  usb_iso_transfer.md  usb_streaming.md  uvc_ptz_insta360_link.md  vision_api.md  vision_minimal_framework.md  wheelhouse.md
firebase/: rtdb.rules.authenticated.json  rtdb.rules.json
licenses/: dependency_inventory.json  full_licenses.json  gradle_license_map.json  ignore_list.json
scripts/: README.md  adb_brain_debug.sh  arduino_generate_curated_bundle.py  arduino_set_additional_urls.sh  arduino_stage_curated_bundle.sh  build_arduino_builtin_tools_android.sh  build_arduino_cli_android.sh  build_curl_android.sh  build_dropbear.sh  build_facade_wheels.py  build_kugutzpy_android.sh  build_kugutzsh_android.sh  build_llama_android.sh  build_methingspy_android.sh  build_methingsrun_android.sh  build_methingssh_android.sh  build_p4a.ps1  build_p4a.sh  ci_agent_smoke_test.py  dropbear.patch  kugutzpy.c  (+16 more)
(+380 files in other folders)
